# swagger.json
@@ -5,16 +5,34 @@
     "description": "Recipes Api",
     "version": "1.0.0"
   },
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
-    "http", "https"
+    "http"
   ],
   "paths": {
+    "/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/api-docs": {
       "get": {
-        "tags": [
-          "Api Docs"
-        ],
         "description": "",
         "responses": {
           "default": {
@@ -57,7 +75,70 @@
             "in": "body",
             "description": "The recipe to create.",
             "schema": {
-              "$ref": "#/definitions/Recipe"
+              "type": "object",
+              "properties": {
+                "example": {
+                  "type": "object",
+                  "properties": {
+                    "name": {
+                      "type": "string",
+                      "example": "Chicken Parmesan"
+                    },
+                    "serves": {
+                      "type": "number",
+                      "example": 4
+                    },
+                    "description": {
+                      "type": "string",
+                      "example": "Crispy breaded chicken breasts topped with marinara sauce and melted cheese."
+                    },
+                    "ingredients": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "amount": {
+                            "type": "number",
+                            "example": 0.25
+                          },
+                          "amountString": {
+                            "type": "string",
+                            "example": "1/4"
+                          },
+                          "measurementDescription": {
+                            "type": "string",
+                            "example": "teaspoon"
+                          },
+                          "measurement": {
+                            "type": "string",
+                            "example": "tsp"
+                          },
+                          "ingredient": {
+                            "type": "string",
+                            "example": "salt"
+                          }
+                        }
+                      }
+                    },
+                    "instructions": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "stepNumber": {
+                            "type": "number",
+                            "example": 7
+                          },
+                          "instruction": {
+                            "type": "string",
+                            "example": "Serve hot with pasta or a side salad."
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
             }
           }
         ],
@@ -67,6 +148,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -138,6 +222,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -167,6 +254,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -285,6 +375,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -360,6 +453,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -412,6 +508,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
